# rexit

./: .gitignore  Cargo.toml  README.md  install.sh
assets/: apprentice.toml  catppuccin-mocha.toml  city-lights.toml  cyberpunk.toml  dracula.toml  everforest.toml  flexoki.toml  gruvbox-light.toml  gruvbox.toml  high-contrast.toml  horizon.toml  kanagawa.toml  material-ocean.toml  midnight.toml  modus-operandi.toml  modus-vivendi.toml  monokai-pro.toml  night-owl.toml  nord.toml  one-dark.toml  outrun.toml  oxocarbon.toml  palenight.toml  poimandres.toml  rexit.1  rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml  shades-of-purple.toml  solarized-dark.toml  solarized-light.toml  synthwave-84.toml  terafox.toml  tokyo-night.toml  vaporwave.toml  zenburn.toml
src/: main.rs
