[package]
name = "rexit"
version = "0.2.0"
edition = "2021"
authors = ["Ninso112"]
description = "A minimalist TUI power menu for Linux, optimized for Hyprland"
repository = "https://github.com/Ninso112/rexit"
license = "GPL-3.0"
keywords = ["tui", "power-menu", "hyprland", "linux", "system", "rice"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
